
option java_outer_classname="InitCommandProtocol";
package com.alachisoft.tayzgrid.common.protobuf;
message InitCommand {
	optional string cacheId = 1;
	optional int64 requestId = 2;
	optional string clientId = 3;
	optional string licenceCode = 4;
	optional string licenceInfo = 5;
	optional bool isDotnetClient = 6;
	optional bool isBridgeClient = 7;
	optional string clientEditionId = 8;
}