import "EventId.proto";
option java_outer_classname="NodeLeftEventResponseProtocol";
package com.alachisoft.tayzgrid.common.protobuf;
message NodeLeftEventResponse 
{
	optional string clusterIp = 1;
	optional string clusterPort = 2;
	optional string serverIp = 3;
	optional string serverPort = 4;
	optional EventId eventId = 5;
}